bugfix for mobile testimonial section

--- a/index.html
+++ b/index.html
@@ -613,10 +613,10 @@
           });
 
           $('.owl-carousel').owlCarousel({
-              loop:true,
+              loop:false,
               margin:10,
               responsiveClass:true,
-              autoplay:true,
+              autoplay:false,
               responsive:{
                   0:{
                       items:1,
