--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="item">
                         <div class="coin-image">
-                          <img src="./images/bt.png" alt="">
+                          <img src="./images/Group 770.png" alt="">
                         </div>
                         <div class="rate-stats">
                           <span>Bitcoin (BTC)</span>
@@ -296,7 +296,7 @@
                     </div>
                     <div class="signature-wrapper">
                         <div class="coin-image">
-                            <img src="./images/bt.png" alt="">
+                            <img src="./images/Group 770.png" alt="">
                           </div>
                           <div class="rate-stats">
                             <span>Bitcoin (BTC)</span>
