--- a/register.html
+++ b/register.html
@@ -184,7 +184,7 @@
                                       <input type="text" class="form-control" id="" placeholder="State">
                                   </div>
                                   <div class="form-group"> 
-                                      <input type="number" class="form-control" id="" placeholder="Mobile phone Number">
+                                      <input type="tel" class="form-control" id="" placeholder="Mobile phone Number">
                                   </div>
                               </div>
 
@@ -200,7 +200,7 @@
                                       </select>
                                   </div>
                                   <div class="form-group">
-                                    <input type="number" class="form-control" id="bank_acc" placeholder="Bank Acc no" class="form-text text-muted">
+                                    <input type="text" class="form-control" id="bank_acc" placeholder="Bank Acc no" class="form-text text-muted">
                                   </div>
                                   <div class="form-group">   
                                       <input type="text" class="form-control" id="bank_name" placeholder="Bank Acc Name"  class="form-text text-muted">
