--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
           </div>
         </div>
         <div class="container">
-          <div class="row">
-              <div class="tweet-tweet col-md-6" style="overflow-x: hidden"><a class="twitter-timeline" height="750" href="https://twitter.com/Naira4Dollar/favorites" data-widget-id="339222108657840128" data-chrome="nofooter ">News Tweets by @Naira4Dollar</a>
+          <div class="row" style="overflow-x: hidden">
+              <div class="tweet-tweet col-md-6"><a class="twitter-timeline" height="750" href="https://twitter.com/Naira4Dollar/favorites" data-widget-id="339222108657840128" data-chrome="nofooter ">News Tweets by @Naira4Dollar</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
               </div>
               <div class="col-md-6 tweet-side">
