--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <header>
                 <div class="container top-nav">
                     <div class="row">
-                        <div class="col-lg-6 col-xs-8">
+                        <div class="col-lg-6 col-8">
                             <img src="./images/globe.png" alt="globe image"> <a href="mailto:support@sunnej.com">support@sunnej.com</a>
                             <img src="./images/call.png" alt="call image" /><a href="tel:+2347004007000">07004007000</a>
                             <img src="./images/whatsapp.png" alt="whatsapp image" /><a href="">Send Message</a>
                         </div>
-                        <div class="col-lg-6 col-xs-4 padding-lr0">
+                        <div class="col-lg-6 col-4 padding-lr0">
                             <span class="float-right">
                                 <a href="https://www.facebook.com/Naira4dollar-1039979582847102/" target="_blank" rel="noopener noreferrer"><img src="./images/facebook.png" alt=""></a> 
                                <a href="https://instagram.com/naira4dollar" target="_blank" rel="noopener noreferrer"><img src="./images/instagram.png" alt=""></a> 
